compiler/kernc_cli/tests/soundness/run-pass/projection/repeated_nested_projection_in_generic_container_normalizes.kn
// class: projection-normalization
// source: repeated nested concrete projections inside a generic container should normalize without tripping cycle bookkeeping
// exit: 0

trait Step {
    type Mid;
};

trait Finish {
    type Out;
};

struct Pair[T] {
    left: T,
    right: T,
};

struct Shell {};
struct X {};

impl X: Step {
    type Mid = Shell;
}

impl Shell: Finish {
    type Out = i32;
}

fn sum(pair: Pair[X.Step.Mid.Finish.Out]) i32 {
    return pair.left + pair.right;
}

fn main() i32 {
    let pair = Pair[X.Step.Mid.Finish.Out].{ left: 7, right: 9 };
    let size = @sizeOf[Pair[X.Step.Mid.Finish.Out]]();
    return if (sum(pair) == 16 and size == 8) { 0 } else { 1 };
}
